# DraconicEngine

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: Modules.cmake
docs/: cxxmodules.md
engine/native/: CMakeLists.txt
engine/native/core/: CMakeLists.txt
engine/native/core/definitions/: definitions.cppm  version.cppm
engine/native/core/math/: constants.cppm  math.cppm  math.test.cpp  vector4.cppm
engine/native/core/memory/: allocator.cppm  bumpAllocator.cpp  bumpAllocator.cppm  fixedAllocator.cpp  fixedAllocator.cppm  pageAllocator.cpp  pageAllocator.cppm  root.cppm
